13072021 : fixed max width, no horizontal scroll, breakpoints… on point, maybe add up some margin at 550?

--- a/app.css
+++ b/app.css
@@ -2,8 +2,10 @@
 
 /*overall style elements*/
 body {
-    margin: auto 0;
+    max-width: 2000px;
+    margin: auto;
     font-family: 'Raleway', sans-serif;
+
 }
 
 h1 {
@@ -271,7 +273,8 @@ footer section {
     display: flex;
     flex-wrap: wrap;
     width: 25%;
-    margin-right: 20px;
+    margin-right: 30px;
+    padding-right: 30px;
 }
 
 #popular-display {
@@ -490,7 +493,6 @@ footer section {
 
     .popular-indv {
         width: 100%;
-        margin: 5px 0;
         padding: 0;
         font-size: 90%;
     }
@@ -571,7 +573,7 @@ footer section {
     .housing-indv,
     .activities-indv {
         width: 100%;
-        margin: 5px 0;
+        margin: 10px 0;
         padding: 0;
         font-size: 90%;
     }
